<resources>
    <string name="idle">空闲</string>
    <string name="accessibility_permission">当前功能需要使用辅助功能，请点击确定前往开启NEW ATFM辅助功能，如果系统提示已开启，请尝试关闭后重新开启</string>
    <string name="adb_open_advice">如有ADB连接电脑提示弹窗，请点击允许</string>
    <string name="adb_permission"><![CDATA[当前功能需要申请ADB权限，请连接电脑并在电脑输入\"adb tcpip 5555\"后点击确定进行连接\n<b style=\'color:red\'>请注意保护设备的隐私安全，开启ADB权限有可能导致设备被他人恶意侵入</b>]]></string>
    <string name="android_version_error">此项功能依赖Android SDK版本%d,当前版本为%d</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="no_inform">不再提示</string>
    <string name="device_usage_permission">当前功能需要开启访问设备使用情况，请点击确定前往开启</string>
    <string name="float_go_to_grant">现在去开启</string>
    <string name="float_no_grant_now">暂不开启</string>
    <string name="float_permission">当前功能需要悬浮窗权限，请点击确定前往授权</string>
    <string name="huawei_setting_fail">进入设置页面失败，请手动设置</string>
    <string name="open_adb_permission_failed">开启ADB权限失败，请连接电脑并在命令行输入\"adb tcpip 5555\"后再点击重试</string>
    <string name="permission_no_float_permission">悬浮窗权限未获取</string>
    <string name="permission_no_root_need_adb">非Root设备需要开启ADB 5555端口并授权调试才可使用 请在命令行执行\"adb tcpip 5555\"</string>
    <string name="permission_right_parentheses">)</string>
    <string name="permission_splash">/</string>
    <string name="permission_default">检查权限中</string>
    <string name="permission_i_grant">我已授权</string>
    <string name="permission_i_know">我知道了</string>
    <string name="permission_i_open">我已开启</string>
    <string name="permission_list_error">权限申请异常</string>
    <string name="permission_request_permission">权限申请(</string>
    <string name="permission_valid_fail">校验失败</string>
    <string name="request_dynamic_permission">当前功能需要申请%s，共%d项权限，请点击确定进行授权</string>
    <string name="root_permission">需要申请Root权限，请Root后使用</string>
    <string name="vivo_open_float"><![CDATA[请进入\"应用管理->权限管理->悬浮窗\"页面开启权限]]></string>
    <string name="vivo_open_float_b"><![CDATA[请手动开启i管家，进入\"应用管理->权限管理->悬浮窗\"页面开启权限]]></string>
    <string name="vivo_open_float_c"><![CDATA[请手动开启i管家，进入\"应用管理->权限管理->悬浮窗\"页面开启权限]]></string>
</resources>